# ChatAI

./: pyproject.toml  readme.MD
android/: manifest.template.xml
src/: main.py  main_simple.py  requirements.txt
src/api/: openrouter.py
src/ui/: components.py  styles.py
src/utils/: cache.py  monitor.py
